added TypeMaps for better mapping of forign entities