@@ -1,13 +1,14 @@
 package com.shikhilrane.personCity.personToCity.service.ServiceImplmentations;
 
-import com.shikhilrane.personCity.personToCity.dto.CityDto;
 import com.shikhilrane.personCity.personToCity.dto.PersonDto;
+import com.shikhilrane.personCity.personToCity.dto.PersonDtoForAll;
 import com.shikhilrane.personCity.personToCity.dto.PersonDtoForCity;
 import com.shikhilrane.personCity.personToCity.entities.Person;
 import com.shikhilrane.personCity.personToCity.repositories.PersonRepository;
 import com.shikhilrane.personCity.personToCity.service.CityService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -25,13 +26,34 @@ public class CityServiceImpl implements CityService {
     public List<PersonDtoForCity> getAllPersons(Long id) {
         return personRepository.findByCityId(id)
                 .stream()
-                .map(p -> {
-                    PersonDtoForCity dto = new PersonDtoForCity();
-                    dto.setId(p.getId());
-                    dto.setName(p.getName());
-                    dto.setAge(p.getAge());
-                    dto.setCityName(p.getCity().getName());
-                    return dto;
-                }).toList();
+//                .map(p -> {
+//                    PersonDtoForCity personDto = new PersonDtoForCity();
+//                    personDto.setId(p.getId());
+//                    personDto.setName(p.getName());
+//                    personDto.setAge(p.getAge());
+//                    personDto.setCityName(p.getCity().getName());
+//                    return personDto;
+//                })
+                .map(e -> modelMapper.map(e,PersonDtoForCity.class))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<PersonDtoForAll> getAllPersonList() {
+        List<Person> all = personRepository.findAll();
+        return all
+                .stream()
+//                .map((person) -> {
+//                    PersonDtoForAll dto = modelMapper.map(person, PersonDtoForAll.class);
+//                    // Setting up the city fields manually
+//                    if (person.getCity() != null) {
+//                        dto.setCityName(person.getCity().getName());
+//                        dto.setState(person.getCity().getState());
+//                        dto.setCountry(person.getCity().getCountry());
+//                    }
+//                    return dto;
+//                })
+                .map(all1 -> modelMapper.map(all1, PersonDtoForAll.class))
+                .collect(Collectors.toList());
     }
 }
